src/snapshots/rust_debug_info__tests__load_file@x86_64-apple-darwin.snap
---
source: crates/rust_debug_info/src/tests.rs
expression: parsed
snapshot_kind: text
---
DebugInfo
