src/snapshots/rust_debug_info__tests__resolve_function@aarch64-apple-darwin-2.snap
---
source: crates/rust_debug_info/src/tests.rs
expression: "resolver.resolve_function(\"function_call\").unwrap()"
snapshot_kind: text
---
ResolvedAddress {
    address: "0x1000009d4",
}
