src/snapshots/rust_debug_info__tests__resolve_function@aarch64-unknown-linux-gnu-2.snap
---
source: crates/rust_debug_info/src/tests.rs
expression: "resolver.resolve_function(\"function_call\").unwrap()"
snapshot_kind: text
---
ResolvedAddress {
    address: "0x6398",
}
