src/snapshots/rust_debug_info__tests__resolve_function@aarch64-unknown-linux-gnu.snap
---
source: crates/rust_debug_info/src/tests.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
ResolvedAddress {
    address: "0x64d0",
}
