src/snapshots/rust_debug_info__tests__resolve_position@aarch64-apple-darwin-2.snap
---
source: crates/rust_debug_info/src/tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x100000b0c",
}
