src/snapshots/rust_debug_info__tests__resolve_position@aarch64-apple-darwin.snap
---
source: crates/rust_debug_info/src/tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x1000009d4",
}
